public/css/main.css
body {
  margin: 0;
  font-family: 'Helvetica Neue', 'Helvetica';
  font-weight: 300;
}

.light {
  font-family: 'Helvetica Neue', 'Helvetica';
  font-weight: 300;
}

h2 {
  margin: 0 0 20px 0;
  border-bottom: 1px solid #ddd;
}

ul {
  padding-left: 0.5em;
  list-style-type: none;
}

ul li {
  margin: 0;
  padding-bottom: 5px;
}

fieldset {
  border: 1px solid #ddd;
}

#main {
  display: hidden;
}

.column {
  height: 800px;
  width: 150px;
  float: left;
  background: #fff url('/img/column_back.png') repeat-y top right;
  padding: 10px;
}

.column h4 {
  margin: 0;
  border-bottom: 1px solid #ddd;
}

#header {
  padding: 20px 0px 0px 20px;
  height: 70px;
  background: #fff url('/img/header_back.png') repeat-x top left;
}

#container {
  float: left;
  width: 600px;
  padding: 20px;
}

